--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /[Bb]uild/
 /[Bb]uilds/
 /Assets/AssetStoreTools*
+/build_webgl/
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -32,3 +33,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
